[gd_scene load_steps=28 format=3 uid="uid://w0aoap7ccnac"]

[ext_resource type="Texture2D" uid="uid://dacgque1g7if8" path="res://others/pack de sprites de pucci/autor 0011_0-0.png" id="1_8dbq3"]
[ext_resource type="Script" uid="uid://bot4qywerp2bg" path="res://scripts/enemy_2.gd" id="1_ihmep"]
[ext_resource type="Texture2D" uid="uid://wlv72pvel2rh" path="res://others/pack de sprites de pucci/autor 0011_0-1.png" id="2_ab8ms"]
[ext_resource type="Texture2D" uid="uid://caryejo5setw3" path="res://others/pack de sprites de pucci/autor 0011_5010-0.png" id="2_mirml"]
[ext_resource type="Texture2D" uid="uid://bwjuaio58dxak" path="res://others/pack de sprites de pucci/autor 0011_0-2.png" id="3_1s5kj"]
[ext_resource type="Texture2D" uid="uid://21wn8v27r743" path="res://others/pack de sprites de pucci/autor 0011_5010-10.png" id="3_8t6ll"]
[ext_resource type="Texture2D" uid="uid://w137tnw8bht5" path="res://others/pack de sprites de pucci/autor 0011_0-3.png" id="4_jllq5"]
[ext_resource type="Texture2D" uid="uid://cjfcrbg21le08" path="res://others/pack de sprites de pucci/autor 0011_5010-20.png" id="4_q02md"]
[ext_resource type="Texture2D" uid="uid://ct5ehf3a72cjn" path="res://others/pack de sprites de pucci/autor 0011_5010-30.png" id="5_3rht5"]
[ext_resource type="Texture2D" uid="uid://16fqos73imus" path="res://others/pack de sprites de pucci/autor 0011_0-4.png" id="5_hckeb"]
[ext_resource type="Texture2D" uid="uid://bqikun1dsky1s" path="res://others/pack de sprites de pucci/autor 0011_20-0.png" id="6_hckeb"]
[ext_resource type="Texture2D" uid="uid://cp3s1ipbgxreh" path="res://others/pack de sprites de pucci/autor 0011_20-1.png" id="7_ihmep"]
[ext_resource type="Texture2D" uid="uid://ccaadohcj67r8" path="res://others/pack de sprites de pucci/autor 0011_20-2.png" id="8_m2nll"]
[ext_resource type="Texture2D" uid="uid://b1gxk2hgr3bna" path="res://others/pack de sprites de pucci/autor 0011_20-3.png" id="9_7dnvv"]
[ext_resource type="Texture2D" uid="uid://di2jovc37tcpy" path="res://others/pack de sprites de pucci/autor 0011_20-4.png" id="10_8inqk"]
[ext_resource type="Texture2D" uid="uid://cgoxxljqbgrve" path="res://others/pack de sprites de pucci/autor 0011_20-5.png" id="11_bj4er"]
[ext_resource type="Texture2D" uid="uid://diq6ujoqjejdm" path="res://others/pack de sprites de pucci/autor 0011_20-6.png" id="12_mirml"]
[ext_resource type="Texture2D" uid="uid://dg1rd1xk0066o" path="res://others/pack de sprites de pucci/autor 0011_20-7.png" id="13_8t6ll"]
[ext_resource type="Texture2D" uid="uid://b8lpj0xwmbvd1" path="res://others/pack de sprites de pucci/autor 0011_20-8.png" id="14_q02md"]
[ext_resource type="Texture2D" uid="uid://cgnqmxyhdga5x" path="res://others/pack de sprites de pucci/autor 0011_20-9.png" id="15_3rht5"]
[ext_resource type="Texture2D" uid="uid://cxi4ux1l2trno" path="res://others/pack de sprites de pucci/autor 0011_20-10.png" id="16_sflpe"]
[ext_resource type="Texture2D" uid="uid://b51kotwmbubm7" path="res://others/pack de sprites de pucci/autor 0011_20-11.png" id="17_cf08r"]
[ext_resource type="PackedScene" uid="uid://bcute71j5yuwi" path="res://entitites/stand_enemy2.tscn" id="19_m2nll"]
[ext_resource type="AudioStream" uid="uid://2w7mfjdkd22t" path="res://sounds/enemies/pucci_attack.ogg" id="24_8t6ll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mrhvv"]
size = Vector2(21, 39)

[sub_resource type="SpriteFrames" id="SpriteFrames_7et56"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mirml")
}, {
"duration": 1.0,
"texture": ExtResource("3_8t6ll")
}],
"loop": false,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mirml")
}, {
"duration": 1.0,
"texture": ExtResource("3_8t6ll")
}, {
"duration": 1.0,
"texture": ExtResource("4_q02md")
}, {
"duration": 1.0,
"texture": ExtResource("5_3rht5")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_8dbq3")
}, {
"duration": 1.0,
"texture": ExtResource("2_ab8ms")
}, {
"duration": 1.0,
"texture": ExtResource("3_1s5kj")
}, {
"duration": 1.0,
"texture": ExtResource("4_jllq5")
}, {
"duration": 1.0,
"texture": ExtResource("5_hckeb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_hckeb")
}, {
"duration": 1.0,
"texture": ExtResource("7_ihmep")
}, {
"duration": 1.0,
"texture": ExtResource("8_m2nll")
}, {
"duration": 1.0,
"texture": ExtResource("9_7dnvv")
}, {
"duration": 1.0,
"texture": ExtResource("10_8inqk")
}, {
"duration": 1.0,
"texture": ExtResource("11_bj4er")
}, {
"duration": 1.0,
"texture": ExtResource("12_mirml")
}, {
"duration": 1.0,
"texture": ExtResource("13_8t6ll")
}, {
"duration": 1.0,
"texture": ExtResource("14_q02md")
}, {
"duration": 1.0,
"texture": ExtResource("15_3rht5")
}, {
"duration": 1.0,
"texture": ExtResource("16_sflpe")
}, {
"duration": 1.0,
"texture": ExtResource("17_cf08r")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ihmep"]
radius = 13.0
height = 42.0

[node name="Enemy2" type="CharacterBody2D" groups=["Enemies"]]
z_index = -1
collision_layer = 4
script = ExtResource("1_ihmep")

[node name="Colisor" type="CollisionShape2D" parent="."]
process_mode = 3
position = Vector2(0.5, 1.5)
shape = SubResource("RectangleShape2D_mrhvv")

[node name="Idle" type="AnimatedSprite2D" parent="."]
position = Vector2(0.812499, 1.625)
scale = Vector2(0.332627, 0.332627)
sprite_frames = SubResource("SpriteFrames_7et56")
animation = &"death"
autoplay = "idle"

[node name="Detector de ch√£o" type="RayCast2D" parent="."]
position = Vector2(13, -14)
target_position = Vector2(-0.0952377, 52.619)

[node name="Detector de Player" type="RayCast2D" parent="."]
target_position = Vector2(15, 0)
collision_mask = 2

[node name="Detector de parede" type="RayCast2D" parent="."]
position = Vector2(6, -4)
target_position = Vector2(17, 0)

[node name="Hitbox" type="Area2D" parent="."]
process_mode = 3
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_ihmep")
debug_color = Color(0.902452, 0.308624, 0, 0.42)

[node name="Stand_Pucci" parent="." instance=ExtResource("19_m2nll")]
process_mode = 3
position = Vector2(-2, -3)

[node name="attack_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_8t6ll")
volume_db = -15.0
playback_type = 1

[connection signal="animation_finished" from="Idle" to="." method="_on_idle_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
